# zero2prod

./: Cargo.toml  Dockerfile  docker-compose.yaml  test.http
.github/workflows/: ci.yaml
migrations/: 20221211085932_create_subscriptions_table.up.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
