[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4.2.1", features=["rustls"]}
config = "0.13.3"
serde = { version = "1.0.149", features = ["derive"] }
tokio = {version = "1", features=["macros", "rt-multi-thread"]}
chrono = {version="0.4.23", default-features=false, features=["clock"]}
uuid = {version = "1.2.2", features=["v4"]}

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.13"
