[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4.2.1", features=["rustls"]}
config = "0.13.3"
serde = { version = "1.0.149", features = ["derive"] }
tokio = {version = "1", features=["macros", "rt-multi-thread"]}
chrono = {version="0.4.23", default-features=false, features=["clock"]}
uuid = {version = "1.2.2", features=["v4"]}
log = "0.4.17"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6.2"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.0"
claim = "0.5.0"
validator = "0.16.0"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
fake = "~2.3"
once_cell = "1.16.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = "0.11.13"
